tests/typing/bad/testfile-generics-3.rs
fn f<T> (x : T) -> T {
    x + x
}

fn main() {
    f(3);
}